--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html, body, #map {
     #infobar {
       width: 350px; } }
   #infobar #searchbox {
-    padding: 20px; }
+    padding: 20px 20px 10px 20px; }
     #infobar #searchbox input {
       font-family: arial, sans-serif;
       box-sizing: border-box;
@@ -58,8 +58,11 @@ html, body, #map {
       border: 1px solid #cecece;
       border-radius: 3px; }
   #infobar #locations {
-    padding: 10px 10px 0 10px;
-    max-height: 100%;
+    padding: 0 10px;
+    max-height: 85%;
+    max-height: calc(100% - 68px);
+    border-top: 1px solid #dedede;
+    padding-top: 10px;
     overflow: auto; }
     #infobar #locations .location {
       display: block;
@@ -90,3 +93,44 @@ html, body, #map {
         box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2); }
         #infobar #locations .location a:hover {
           background: #64B5F6; }
+
+#addbtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 12;
+  display: block;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 3px;
+  font-size: 13px;
+  padding: 0 8px;
+  background: #2196F3;
+  color: white;
+  font-size: 14px;
+  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2); }
+  #addbtn:hover {
+    background: #64B5F6; }
+
+#addform {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 15;
+  display: none;
+  background: white;
+  background: rgba(255, 255, 255, 0.4); }
+  #addform iframe {
+    display: block;
+    width: 100%;
+    max-width: 800px;
+    height: 95%;
+    height: calc(100% - 50px);
+    margin: auto;
+    margin-top: 25px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    border-radius: 5px; }
