Added point of interest form

--- a/src/index.jade
+++ b/src/index.jade
@@ -28,6 +28,7 @@ html
 			a(href='#' onclick='show_add_form(\'tower\')') Guard tower
 			a(href='#' onclick='show_add_form(\'resource\')') Resource
 			a(href='#' onclick='show_add_form(\'mine\')') Public mine
+			a(href='#' onclick='show_add_form(\'poi\')') Point of interest
 
 		#addform(onclick='hide_add_form()')
 			iframe(src='about:blank')
