--- a/src/style.sass
+++ b/src/style.sass
@@ -1,3 +1,23 @@
+$c_blue: #2196F3
+$c_green: #67C547
+$c_text: #444
+$c_text_light: #888
+$c_border: #ddd
+
+$fonts: 'Roboto', arial, sans-serif
+
+$radius: 3px
+
+=shadow
+	box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px
+
+=transition($duration: 80ms)
+	-webkit-transition: all $duration ease-in-out
+	-moz-transition: all $duration ease-in-out
+	-ms-transition: all $duration ease-in-out
+	-o-transition: all $duration ease-in-out
+	transition: all $duration ease-in-out
+
 *
 	margin: 0
 	padding: 0
@@ -8,7 +28,7 @@
 
 html, body, #map
 	height: 100%
-	font-family: arial, sans-serif
+	font-family: $fonts
 	overflow-x: hidden
 
 #map
@@ -16,221 +36,68 @@ html, body, #map
 	top: 0
 	right: 0
 	bottom: 0
-	left: 300px
-	width: calc(100% - 250px)
+	left: 0px
+	width: 100%
 	z-index: 0
 
-	@media all and (min-width: 1200px)
-		width: calc(100% - 350px)
-		left: 350px
 
-#coords
-	width: 100px
-	margin-left: -50px
-	text-align: center
-	
-	span
-		display: inline-block
-		padding: 5px 10px
-		background: white
-		box-shadow: 0px 1px 4px black
-		border-radius: 0 0 2px 2px
-
-
-#infobar
+#sidebar
 	position: absolute
 	top: 0
 	left: 0
 	bottom: 0
-	width: 300px
+
 	height: 100%
-	box-shadow: 1px 0px 4px black
-	z-index: 10
-	background: #eee
+	width: 0px
+	overflow-y: auto
 
-	@media all and (min-width: 1200px)
-		width: 350px
-
-
-	#searchbox
-		padding: 20px 20px 10px 20px
-
-		input
-			font-family: arial, sans-serif
-			box-sizing: border-box
-			display: block
-			width: 100%
-			padding: 10px
-			border: 1px solid #cecece
-			border-radius: 3px
-
-
-	#locations
-		padding: 0 10px
-		max-height: 85%
-		max-height: calc(100% - 68px)
-		border-top: 1px solid #dedede
-		padding-top: 10px
-		overflow: auto
-
-		.location
-			display: block
-			padding: 15px
-			height: 50px
-			background: white
-			box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05)
-			border-radius: 3px
-			color: #222
-			margin-bottom: 10px
-
-			.name
-				float: left
-				height: 20px
-				line-height: 20px
-				font-size: 14px
-
-			a
-				display: block
-				float: right
-				height: 30px
-				line-height: 30px
-				margin: -5px
-				border-radius: 3px
-				font-size: 13px
-				padding: 0 8px
-				background: #2196F3
-				color: white
-				font-size: 14px
-				box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2)
-
-				&:hover
-					background: #64B5F6
-
-#addbtn
-	position: absolute
-	top: 10px
-	right: 10px
-	z-index: 12
-	display: block
-	height: 28px
-	line-height: 28px
-	border-radius: 3px
-	padding: 0 12px
-	background: #2196F3
-	color: white
-	font-size: 14px
-	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2)
-	width: 150px
-	text-align: center
-
-	&:hover
-		background: #64B5F6
-
-#addmenu
-	position: absolute
-	top: 50px
-	right: -150px
-	z-index: 12
-	width: 150px
-	text-align: center
 	background: white
-	border-radius: 3px
-	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2)
-	padding: 2px 0
-	-webkit-transition: all 80ms ease-in-out
-	-moz-transition: all 80ms ease-in-out
-	-ms-transition: all 80ms ease-in-out
-	-o-transition: all 80ms ease-in-out
-	transition: all 80ms ease-in-out
+	+shadow
 
-	&.open
-		right: 10px
+	h2
+		margin-top: 25px
+		margin-bottom: 5px
+		padding: 0 20px
+
+		color: $c_text
+
+		font-size: 14px
+		font-weight: 500
 
 	a
 		display: block
-		height: 30px
-		line-height: 30px
-		color: #333
-		font-weight: bold
-		font-size: 13px
 
-		&:hover
-			color: #2196F3
+		padding: 10px 20px
 
-#addform
-	position: absolute
-	top: 0
-	left: 0
-	bottom: 0
-	right: 0
-	width: 100%
-	height: 100%
-	z-index: 15
-	display: none
-	background: white
-	background: rgba(255, 255, 255, 0.4)
-
-	iframe
-		display: block
-		width: 100%
-		max-width: 800px
-		height: 95%
-		height: calc(100% - 50px)
-		margin: auto
-		margin-top: 25px
-		box-shadow: 0 0 15px rgba(0, 0, 0, 0.5)
-		border-radius: 5px
-
-
-#filterbox
-	position: absolute
-	bottom: 0
-	left: 300px
-	background: white
-	width: 140px
-	border-radius: 0 3px 0 0
-	z-index: 9
-	padding-top: 3px
-
-	@media all and (min-width: 1200px)
-		left: 350px
-
-	.option
-		display: block
-		height: 42px
-		line-height: 42px
-		color: #333
-		font-weight: bold
-		font-size: 13px
-		padding: 0 10px 0 14px
-		cursor: pointer
-		background-position: 5px 3px
+		background-position: bottom left
 		background-repeat: no-repeat
-		-webkit-touch-callout: none
-		-webkit-user-select: none
-		-khtml-user-select: none
-		-moz-user-select: none
-		-ms-user-select: none
-		user-select: none
+		color: $c_text
+		+transition(50ms)
 
-		&:hover
-			color: #2196F3
+		font-size: 14px
+		font-weight: 400
 
+		&.small
+			padding: 8px 20px
+
+		small
+			display: block
+			color: $c_text_light
+			font-size: 12px
 
 		span
 			display: block
 			float: left
-			height: 16px
-			margin-top: 12px
+
 			width: 16px
-			border: 2px solid #ccc
+			height: 16px
+
+			margin: 1px 8px 1px 2px
+
 			border-radius: 8px
-			margin-right: 10px
-			-webkit-transition: all 100ms ease-in-out
-			-moz-transition: all 100ms ease-in-out
-			-ms-transition: all 100ms ease-in-out
-			-o-transition: all 100ms ease-in-out
-			transition: all 100ms ease-in-out
+			border: 2px solid $c_border
+			background: white
+			+transition(80ms)
 
 			&::after
 				display: block
@@ -241,6 +108,191 @@ html, body, #map
 				margin: 4px
 				background: white
 
-		&.on span
-			border-color: #67C547
-			background-color: #67C547
+
+		&:hover
+			color: $c_blue
+
+			span
+				border-color: $c_blue
+
+		&.selected span
+			border-color: $c_blue
+			background: $c_blue
+
+
+	.div
+		margin-top: 20px
+		border-top: 1px solid $c_border
+
+	.sub
+		margin-left: 20px
+		margin-bottom: 10px
+
+		a
+			padding: 5px 20px
+			color: $c_text_light
+			font-size: 13px
+
+			&:hover
+				color: $c_blue
+
+			span
+				width: 12px
+				height: 12px
+				border-radius: 6px
+
+				&::after
+					display: none
+
+	p.disclaimer
+		padding: 15px
+		color: $c_text_light
+		font-size: 10px
+
+		a
+			display: inline
+			padding: 0
+			color: $c_blue
+			font-size: 10px
+
+			&:hover
+				text-decoration: underline
+
+#coords
+	width: 100px
+	margin-left: -50px
+	text-align: center
+	
+	span
+		display: inline-block
+		padding: 5px 10px
+
+		color: $c_text
+		background: white
+		border-radius: $radius $radius 0 0
+		+shadow
+
+
+#searchbox
+	position: absolute
+	top: 15px
+	left: 15px
+	width: 320px
+	z-index: 12
+	height: 46px
+	max-height: 400px
+	overflow: hidden
+	border-radius: $radius
+	+shadow
+
+	input
+		font-family: $fonts
+		box-sizing: border-box
+		display: block
+		width: 320px
+		height: 46px
+		line-height: 46px
+		padding: 0 15px
+		border-radius: $radius
+
+	&.open
+		height: auto
+
+		input
+			border-radius: $radius $radius 0 0
+
+	#searchresults
+		width: 320px
+		
+		background: white
+		border-top: 1px solid $c_border
+		border-radius: 0 0 $radius $radius
+
+		a.location
+			display: block
+
+			height: 50px
+			padding-left: 50px
+
+			background-position: 12px 8px
+			background-repeat: no-repeat
+
+			color: $c_text
+			font-size: 14px
+
+			&.mine
+				background-image: url('images/mine_icon.png')
+			&.resource
+				background-image: url('images/resource_icon.png')
+			&.deed_large
+				background-image: url('images/deed_large_icon.png')
+			&.deed_small
+				background-image: url('images/deed_small_icon.png')
+			&.deed_solo
+				background-image: url('images/deed_solo_icon.png')
+			&.ruins
+				background-image: url('images/ruins_icon.png')
+
+			span
+				display: block
+
+				height: 50px
+				padding-top: 10px
+				padding-left: 4px
+
+				border-bottom: 1px solid $c_border
+
+				em
+					display: block
+					font-style: normal
+
+					&.mayor
+						color: $c_text_light
+						font-size: 11px
+
+			&.last span
+				border: none
+				border-radius: 0 0 $radius $radius
+
+			&:hover
+				background-color: lighten($c_border, 10%)
+
+body
+	&.sidebar
+		#sidebar
+			width: 300px
+
+		#searchbox
+			left: 315px
+
+		#map
+			left: 300px
+			width: calc(100% - 300px)
+
+#addform
+	display: none
+	position: absolute
+	top: 0
+	left: 0
+	bottom: 0
+	right: 0
+
+	width: 100%
+	height: 100%
+	z-index: 15
+	
+	background: black
+	background: rgba(0, 0, 0, 0.4)
+
+	iframe
+		display: block
+
+		width: 100%
+		max-width: 800px
+		height: 95%
+		height: calc(100% - 50px)
+
+		margin: auto
+		margin-top: 25px
+		border-radius: 5px
+		+shadow
