--- a/src/style.sass
+++ b/src/style.sass
@@ -201,7 +201,6 @@ a#sidebartoggle
 	width: 320px
 	z-index: 12
 	height: 46px
-	max-height: 400px
 	overflow: hidden
 	border-radius: $radius
 	+shadow
@@ -249,6 +248,12 @@ a#sidebartoggle
 				background-image: url('images/mine_icon.png')
 			&.poi
 				background-image: url('images/poi_icon.png')
+			&.poi_statue
+				background-image: url('images/poi_statue_icon.png')
+			&.poi_bridge
+				background-image: url('images/poi_bridge_icon.png')
+			&.poi_fountain
+				background-image: url('images/poi_fountain_icon.png')
 			&.guard_tower
 				background-image: url('images/guard_tower_icon.png')
 			&.resource
