Added submitted locations, added report wrong location form.

--- a/src/index.jade
+++ b/src/index.jade
@@ -40,6 +40,8 @@ html
 			a.small(href='#' onclick='show_add_form(\'mine\'); return false') Public mine
 			a.small(href='#' onclick='show_add_form(\'poi\'); return false') Point of interest
 			a.small(href='#' onclick='show_add_form(\'trees\'); return false') Forest
+			br
+			a.small.report(href='#' onclick='show_add_form(\'report\'); return false') Report wrong location data
 
 			.div
 
