--- a/src/style.sass
+++ b/src/style.sass
@@ -101,6 +101,11 @@ a#sidebartoggle
 		&.small
 			padding: 8px 20px
 
+		&.report
+			font-style: italic
+			font-size: 12px
+			padding: 2px 20px
+
 		small
 			display: block
 			color: $c_text_light
